--- a/MVVMFirma/Views/MainWindowResources.xaml
+++ b/MVVMFirma/Views/MainWindowResources.xaml
@@ -6,105 +6,143 @@
     <DataTemplate DataType="{x:Type vm:RaportPlatnosciViewModel}">
         <vw:RaportPlatnosciView />
     </DataTemplate>
+
+    <DataTemplate DataType="{x:Type vm:RaportWizytViewModel}">
+        <vw:RaportWizytView />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type vm:WszystkieTowaryViewModel}">
         <vw:WszystkieTowaryView/>
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyTowarViewModel}">
         <vw:NowyTowarView/>
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaFakturaViewModel}">
         <vw:NowaFakturaView/>
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieFakturyViewModel}">
         <vw:WszystkieFakturyView/>
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyOddzialViewModel}">
         <vw:NowyOddzialView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieOddzialyViewModel}">
         <vw:WszystkieOddzialyView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyPersonelViewModel}">
         <vw:NowyPersonelView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkiePersonelViewModel}">
         <vw:WszystkiePersonelView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyLekarzOddzialViewModel}">
         <vw:NowyLekarzOddzialView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieLekarzOddzialViewModel}">
         <vw:WszystkieLekarzOddzialView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyPersonelOddzialViewModel}">
         <vw:NowyPersonelOddzialView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkiePersonelOddzialViewModel}">
         <vw:WszystkiePersonelOddzialView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyLekarzViewModel}">
         <vw:NowyLekarzView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszyscyLekarzeViewModel}">
         <vw:WszyscyLekarzeView />
     </DataTemplate> 
+    
     <DataTemplate DataType="{x:Type vm:NowaWizytaViewModel}">
         <vw:NowaWizytaView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieWizytyViewModel}">
         <vw:WszystkieWizytyView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NoweBadanieViewModel}">
         <vw:NoweBadanieView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieBadaniaViewModel}">
         <vw:WszystkieBadaniaView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NoweSkierowanieViewModel}">
         <vw:NoweSkierowanieView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieSkierowaniaViewModel}">
         <vw:WszystkieSkierowaniaView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaPlatnoscViewModel}">
         <vw:NowaPlatnoscView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkiePlatnosciViewModel}">
         <vw:WszystkiePlatnosciView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyPacjentViewModel}">
         <vw:NowyPacjentView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszyscyPacjenciViewModel}">
         <vw:WszyscyPacjenciView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaHistoriaChorobViewModel}">
         <vw:NowaHistoriaChorobView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieHistorieChorobViewModel}">
         <vw:WszystkieHistorieChorobView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaDokumentacjaViewModel}">
         <vw:NowaDokumentacjaView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieDokumentacjeViewModel}">
         <vw:WszystkieDokumentacjeView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowyLekViewModel}">
         <vw:NowyLekView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieLekiViewModel}">
         <vw:WszystkieLekiView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaReceptaViewModel}">
         <vw:NowaReceptaView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieReceptyViewModel}">
         <vw:WszystkieReceptyView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:NowaReceptaLekViewModel}">
         <vw:NowaReceptaLekView />
     </DataTemplate>
+    
     <DataTemplate DataType="{x:Type vm:WszystkieReceptyLekiViewModel}">
         <vw:WszystkieReceptyLekView />
     </DataTemplate>
