--- a/MVVMFirma/Views/RaportWizytView.xaml
+++ b/MVVMFirma/Views/RaportWizytView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.RaportPlatnosciView"
+﻿<UserControl x:Class="MVVMFirma.Views.RaportWizytView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,7 +15,7 @@
             <RowDefinition Height="33" />
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Platnosci w wybranym okresie dla wybranego pacjenta" Margin="3" HorizontalContentAlignment="Center" />
+        <Label Grid.Row="0" Content="Raport wizyt dla danego pacjenta" Margin="3" HorizontalContentAlignment="Center" />
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -37,16 +37,16 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Content="Wybierz pacjenta" Margin="3" />
+            <Label Grid.Column="0" Content="Wybierz pacjenta:" Margin="3" />
             <ComboBox Grid.Column="1" Margin="3" 
-                      ItemsSource="{Binding PacjentItems}"
-                      DisplayMemberPath="Value"
-                      SelectedValuePath="Key"
-                      SelectedValue="{Binding Path=PacjentId,Mode=TwoWay}"
-            />
+                  ItemsSource="{Binding PacjentItems}"
+                  DisplayMemberPath="Value"
+                  SelectedValuePath="Key"
+                  SelectedValue="{Binding Path=PacjentId,Mode=TwoWay}"
+        />
         </Grid>
 
-        <Button Grid.Row="3" Content="Oblicz" Margin="3" Command="{Binding ObliczCommand}"/>
+        <Button Grid.Row="3" Content="Sprawdz" Margin="3" Command="{Binding ObliczCommand}"/>
 
         <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
@@ -54,8 +54,8 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Content="Platnosci wynosza: " Margin="3" />
-            <Label Grid.Column="1" Content="{Binding PlatnosciSuma}" Margin="3" />
+            <Label Grid.Column="0" Content="Suma wizyt " Margin="3" />
+            <Label Grid.Column="1" Content="{Binding LiczbaWizyt}" Margin="3" />
         </Grid>
     </Grid>
 </UserControl>
