--- a/MVVMFirma/Views/NoweBadanieView.xaml
+++ b/MVVMFirma/Views/NoweBadanieView.xaml
@@ -10,8 +10,10 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
             <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="100" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
@@ -24,16 +26,15 @@
         <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Typ badania" />
         <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=TypBadania, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Lekarze" />
-        <ComboBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" 
-                  ItemsSource="{Binding LekarzItems}"
-                  DisplayMemberPath="Value"
-                  SelectedValuePath="Key"
-                  SelectedValue="{Binding Path=LekarzId,Mode=TwoWay}"
-                  />
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Imie i nazwisko lekarza" />
+        <TextBox Grid.Column="1" Grid.Row="2" IsEnabled="False" Margin="0,8,0,8" Text="{Binding Path=LekarzImieNazwisko, UpdateSourceTrigger=PropertyChanged}" />
+        <Button Content="..." Grid.Column="3" Grid.Row="2" Margin="8,8,0,8" Command="{Binding ShowLekarze}" />
 
-        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Pacjenci" />
-        <ComboBox Grid.Column="1" Grid.Row="3" Margin="0,8,0,8" 
+        <Label Grid.Column="0" Grid.Row="3" Margin="0,8,0,8" Content="Specjalizacja lekarza" />
+        <TextBox Grid.Column="1" Grid.Row="3" IsEnabled="False" Margin="0,8,0,8" Text="{Binding Path=LekarzSpecjalizacja, UpdateSourceTrigger=PropertyChanged}" />
+
+        <Label Grid.Column="0" Grid.Row="4" Margin="0,8,0,8" Content="Pacjenci" />
+        <ComboBox Grid.Column="1" Grid.Row="4" Margin="0,8,0,8" 
                   ItemsSource="{Binding PacjentItems}"
                   DisplayMemberPath="Value"
                   SelectedValuePath="Key"
